--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title>dashboard</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <!-- <h1>Dashboard</h1> -->
+            <h1>Overview</h1>
+
+            <div class="header-buttons">
+                <button class="create button">Create New Team</button>
+                <button class="add button">Add New Employee</button>
+            </div>
+        </header>
+        <main>
+            <section class="statistics">
+                <!-- general stats will be displayed here -->
+                <h3>General Statistics</h3>
+                <p>Total Employees</p>
+                <p>Total Completed Courses</p>
+                <p>Average Employee Score</p>
+            </section>
+            <section class="teams">
+                <!-- teams and their members details will be displayed here -->
+            </section>
+        </main>
+    </div>
     <script src="./js/script.js"></script>
 </body>
 </html>
