--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.3.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <title>dashboard</title>
 </head>
 <body>
@@ -19,11 +20,27 @@
         </header>
         <main>
             <section class="statistics">
-                <!-- general stats will be displayed here -->
                 <h3>General Statistics</h3>
-                <p>Total Employees</p>
-                <p>Total Completed Courses</p>
-                <p>Average Employee Score</p>
+
+                <div class="squares">
+                    <div class="total employees">
+                        <i class="fi fi-sr-users-alt"></i>
+                        <p>Total Employees</p>
+                        <p>14</p>
+                    </div>
+    
+                    <div class="total courses">
+                        <i class="fi fi-sr-list-check"></i>
+                        <p>Total Completed Courses</p>
+                        <p>20</p>
+                    </div>
+    
+                    <div class="total score">
+                        <i class="fi fi-sr-features"></i>
+                        <p>Average Employee Score</p>
+                        <p>200</p>
+                    </div>
+                </div>
             </section>
             <section class="teams">
                 <!-- teams and their members details will be displayed here -->
