--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </section>
 
-            <canvas id="line-chart-container" width="800" height="400" style="background-color: white;"></canvas>
+            <canvas id="line-chart-container" width="800" height="400"></canvas>
             
             <section class="teams">
                 <p class="h3">Teams</p>
